Fix spacing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,11 @@
 main {
     max-width: 440px;
-    margin: 99px auto 0;
+    margin: 0 auto;
+    padding-top: 99px;
     font-family: var(--font-family);
-}
-
-h1 {
-    margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
 
 form {
